<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.LoginFragment">

<LinearLayout
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="25dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textColor="@color/colorAccent"
        android:padding="30dp"
        android:text="@string/logIn"/>
    <EditText
        android:id="@+id/usernameField"
        android:hint="@string/userName"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/colorAccent"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/passwordField"
        android:hint="@string/password"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/colorAccent"
        android:textAlignment="center"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="25dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/loginButton"
            android:text="@string/logIn"
            android:textAllCaps="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <TextView
        android:id="@+id/signUpLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/signUp"
        android:textColor="@color/colorAccent"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/errorLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:visibility="gone"
        android:text="@string/unexpectedError"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp" />
</LinearLayout>

</RelativeLayout>