<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="120dp">

    <ImageView
        android:id="@+id/thumbnailCell"
        android:layout_width="150dp"
        android:layout_height="match_parent"
        android:src="@drawable/ic_image"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:contentDescription="@string/newsArticleThumbnail" />

    <TextView
        android:id="@+id/titleCell"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:padding="8dp"
        android:textColor="#000"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/likeIconCell"
        app:layout_constraintStart_toEndOf="@+id/thumbnailCell"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/newsArticles" />

    <ImageButton
        android:id="@+id/likeIconCell"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:background="@null"
        android:contentDescription="@string/likeIconNews"
        android:scaleType="fitXY"
        android:src="@drawable/ic_star"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="#808080" />

</androidx.constraintlayout.widget.ConstraintLayout>