<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp">

            <ImageView
                android:id="@+id/articleImage"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/articleImage" />

            <TextView
                android:id="@+id/articleTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:textColor="@color/colorAccent"
                android:textSize="25sp"
                android:paddingStart="0dp"
                android:paddingEnd="15dp"
                app:layout_constraintEnd_toStartOf="@+id/likeIconCell"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/articleImage"
                tools:text="@string/articleTitle"/>

            <TextView
                android:id="@+id/articleSummary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/articleTitle"
                tools:text="@string/articleSummary"/>

            <ImageButton
                android:id="@+id/likeIconCell"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:scaleType="fitXY"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="-60dp"
                android:background="@null"
                android:contentDescription="@string/likeIconNews"
                android:src="@drawable/ic_star"
                app:layout_constraintBottom_toTopOf="@+id/articleSummary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/articleImage"
                app:layout_constraintVertical_bias="0.0"
                app:tint="@color/grey" />


            <TextView
                android:id="@+id/articleUrl"
                android:autoLink="web"
                android:linksClickable="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:minHeight="50dp"
                android:text="@string/articleLink"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/articleSummary"
                tools:text="@string/articleLink" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>